--- a/tests/samples/hkp-corpus/hkp-sample-15-keyserver.ubuntu.com-index-nobody@boum.org
+++ b/tests/samples/hkp-corpus/hkp-sample-15-keyserver.ubuntu.com-index-nobody@boum.org
@@ -1,6 +1,6 @@
 HTTP/1.1 404 Not Found
-Date: Sun, 14 Nov 2021 03:05:07 GMT
-Server: Hockeypuck/~unreleased
+Date: Thu, 09 Feb 2023 01:33:55 GMT
+Server: Hockeypuck/2.1.0-189-g15ebf24
 Content-Type: text/plain; charset=utf-8
 X-Content-Type-Options: nosniff
 Content-Length: 10
